--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "projeto",
   "version": "0.1.0",
   "private": true,
+  
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.3"
+  },
+  ".__desable__dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "history": "^5.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,10 +42,7 @@
       "last 1 safari version"
     ]
   },
-  ".__devDependencies": {
+  ".__desable__devDependencies": {
     "reinstall-node-modules": "^2.0.0"
-  },
-  "devDependencies": {
-    "reinstall-node-modules": "^1.2.0"
   }
 }
